--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-netlify-cms",
-  "description": "Example Gatsby, and Netlify CMS project",
+  "name": "dailydribble",
+  "description": "Basketball stats and articles",
   "version": "1.1.3",
-  "author": "Austin Green",
+  "author": "Hunter Merritt",
   "dependencies": {
     "bulma": "^0.9.0",
     "gatsby": "^4.0.0",
